2010-10-28  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (autoloads): Use $(builddir) prefix.

010-10-21  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (builddir): New variable, used instead of srcdir.
	(INSTALL_FILES, xemacs): Add tramp-loaddefs.el.
	(autoloads): Do not use $(srcdir) prefix.
	Reported by David Rothenberger <daveroth@acm.org>.

	* tramp-sh.el (tramp-get-inline-coding): Return `nil' in case of
	errors.

2010-10-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-send-command): Simplify last patch, and
	restrict it to here documents.

2010-10-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-file-attributes-with-stat)
	(tramp-do-directory-files-and-attributes-with-stat): Use "e0" in
	order to make stat results a float.  Patch by Andreas Schwab
	<schwab@linux-m68k.org>.
	(tramp-send-command): Unset $PS1 in a subshell, in order not to
	get several prompts when there are commands separated by ";".

	* tramp-util.el (tramp-advice-executable-find): Do not check for
	`tramp-fish-file-name-handler'.  Use
	`tramp-sh-handle-executable-find'.
	(tramp-advice-process-file): Do
	not check for `tramp-fish-file-name-handler'.
	(tramp-advice-call-process-region): Do not check for
	`tramp-fish-file-name-handler'.  Use
	`tramp-sh-handle-call-process-region.

2010-10-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-open-connection-setup-interactive-shell):
	Suppress expansion of tabs to spaces.  Reported by Dale Sedivec
	<dale@codefu.org>.

2010-10-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-file-name-handler-alist): Use
	`tramp-handle-find-backup-file-name'.

2010-10-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-directory-files-and-attributes)
	(tramp-handle-file-exists-p, tramp-handle-file-newer-than-file-p):
	New defuns, taken from tramp-smb.el.
	(tramp-coding-system-change-eol-conversion)